# simpleGL

./: .gitattributes  CMakeLists.txt  README.md  install.sh  main.cpp  pipeline
.cache/clangd/index/: config.hpp.905EB15F86832D26.idx  main.cpp.0B72CCED7129DD1A.idx  utils.cpp.B8F8E7E21EB4B0A6.idx  utils.hpp.D42C75A186F6F57C.idx
include/: color.hpp  config.hpp  graphic.hpp  homemade_utils.hpp  logger.hpp  mesh.hpp  shader.hpp  shapes.hpp  simpleGL.hpp  targets.hpp  texture.hpp  utils.hpp  vao.hpp  vbo.hpp  window.hpp
shaders/: fragment.frag  vertex.vert
src/: color.cpp  logger.cpp  main.cpp  mesh.cpp  shader.cpp  shapes.cpp  targets.cpp  temp.cpp  texture.cpp  utils.cpp  vao.cpp  vbo.cpp  window.cpp
